--- a/Dockerfile-ARM
+++ b/Dockerfile-ARM
@@ -1,17 +1,13 @@
-FROM resin/armv7hf-debian-qemu
+OM resin/armv7hf-debian-qemu
 
 RUN [ "cross-build-start" ]
-
-RUN apt-get update
-RUN apt-get -y upgrade
-RUN apt-get -y install ca-certificates
 
 RUN mkdir -p /go
 ADD . /go
 
 WORKDIR /go
 
-CMD ["/go/av-api-rpc"]
+CMD ["/go/av-api-rpc-arm"]
 
 EXPOSE 8100
 
