--- a/Dockerfile-development
+++ b/Dockerfile-development
@@ -1,6 +1,6 @@
-FROM golang:1.7.1-alpine
+FROM golang:alpine
 
-RUN apk update && apk upgrade && apk add git
+RUN apk update && apk add git
 
 RUN mkdir -p /go/src/github.com/byuoitav
 ADD . /go/src/github.com/byuoitav/av-api-rpc
@@ -11,4 +11,4 @@ RUN go install -v
 
 CMD ["/go/bin/av-api-rpc"]
 
-EXPOSE 8100
+EXPOSE 8000
